# cargo-flux

./: Cargo.toml  LICENSE  README.md  flux.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-06-semver-stamping.md
docs/superpowers/specs/: 2026-04-06-package-scoped-tasks-design.md  2026-04-06-semver-stamping-design.md
src/: channels.rs  cli.rs  git.rs  graph.rs  main.rs  manifest.rs  stamp.rs  tasks.rs  version.rs
src/plugins/: cargo.rs  mod.rs  npm.rs  uv.rs
