[package]
name = "cargo-flux"
version = "0.1.0"
edition = "2024"

[package.metadata.flux]
tasks = ["build", "test", "lint"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
