[package]
name = "cargo-flux"
version = "0.3.0"
edition = "2024"
description = "Workspace topology and task orchestration for mixed-language repositories"
license = "MIT"
repository = "https://github.com/ignition-is-go/cargo-flux"
readme = "README.md"
keywords = ["cargo", "workspace", "monorepo", "task-runner", "polyglot"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils"]

[package.metadata.flux]
tasks = ["build", "test", "lint", "release"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
toml_edit = "0.22"
